Changing deploy yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,17 +25,17 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        cd commit-service && docker build -t senuradockacc/commit-service:v1 --build-arg AWS_ACCESS_KEY_ID_ARG=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY_ARG=${{ secrets.AWS_SECRET_ACCESS_KEY }} .
-        docker push senuradockacc/commit-service:v1
+        cd commit-service && docker build -t yasasmi/commit-service:version-one --build-arg AWS_ACCESS_KEY_ID_ARG=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY_ARG=${{ secrets.AWS_SECRET_ACCESS_KEY }} .
+        docker push yasasmi/commit-service:version-one
 
-        cd ../issues-service && docker build -t senuradockacc/issues-service:latest .
-        docker push senuradockacc/issues-service:latest
+        cd ../issues-service && docker build -t yasasmi/issues-service:version-one .
+        docker push yasasmi/issues-service:version-one
 
-        cd ../pull-request-service && docker build -t senuradockacc/pull-request-service:latest .
-        docker push senuradockacc/pull-request-service:latest
+        cd ../pull-request-service && docker build -t yasasmi/pull-request-service:version-one .
+        docker push yasasmi/pull-request-service:version-one
 
-        cd ../main-application && docker build -t senuradockacc/main-app-service:latest .
-        docker push senuradockacc/main-app-service:latest
+        cd ../main-application && docker build -t yasasmi/main-app-service:version-onet .
+        docker push yasasmi/main-app-service:version-one
 
     # - name: Configure Google Cloud CLI
     #   uses: google-github-actions/setup-gcloud@v0
