--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         cd ../pull-request-service && docker build -t yasasmi/pull-request-service:version-one .
         docker push yasasmi/pull-request-service:version-one
 
-        cd ../main-application && docker build -t yasasmi/main-app-service:version-onet .
+        cd ../main-application && docker build -t yasasmi/main-app-service:version-one .
         docker push yasasmi/main-app-service:version-one
 
     # - name: Configure Google Cloud CLI
