Change in yml files

--- a/commit-deployment.yaml
+++ b/commit-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: commit-service
-          image: senuradockacc/commit-service:v1
+          image: yasasmi/commit-service:version-one
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
