--- a/pull-deployment.yaml
+++ b/pull-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: pull-request-service
-          image: senuradockacc/pull-request-service:latest
+          image: yasasmi/pull-request-service:version-one
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
