--- a/commit-deployment.yaml
+++ b/commit-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: commit-service
-          image: yasasmi/commit-service:version-three
+          image: yasasmi/commit-service:version-4
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
